fixed overflow issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,6 +135,7 @@ body {
   font-weight: 400;
   position: relative;
   line-height: 26px;
+  overflow: hidden;
 }
 
 img {
